# Nightpigeon8

./: .gitignore  .replit  RENDER_DEPLOY.md  dashboard_server.py  main.py  main_bot_api.py  pyproject.toml  render.yaml  replit.md  requirements.txt
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  asyncpg-jsonb.md  render-oauth-cookie.md
api/: server.py
api/routes/: auth.py  cases.py  config.py
artifacts/api-server/public/: config.html  dashboard.html  index.html
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: guilds.ts  index.ts
attached_assets/: Pasted--NIGHTPIGEON-BOT-COMPLETE-REPLIT-AGENT-PROMPT-Paste-thi_1781194895858.txt
bot/: config_manager.py  database.py  main.py  utils.py
bot/cogs/: automod.py  config.py  info.py  logging.py  moderation.py  tasks.py  utility.py
bot/config/: default.yaml
bot/core/: bot.py  config_loader.py  database.py  duration.py  level_check.py  message_formatter.py
bot/data/: guilds.json
bot/plugins/: auto_channel_clean.py  auto_reactions.py  automod.py  autoreply.py  cases.py  command_aliases.py  escalation.py  history.py  levels.py  lockdown.py  logging_plugin.py  mass_actions.py  moderation.py  modnick.py  notes.py  preset_reasons.py  reaction_roles.py  reminders.py  roles.py  slowmode_auto.py  starboard.py  tickets.py  timezones.py  utility.py  welcome.py
dashboard/: app.js  cases.html  config.html  docs.html  guilds.html  index.html  style.css
