[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Nightpigeon Discord Moderation Bot"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.7.1",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pytz>=2024.1",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.9.0.post0",
    "aiosqlite>=0.22.1",
]
